--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "port-folio",
+  "name": "hazary",
   "version": "1.0.0",
   "description": "It's a MERN stacke based Portfolio Website.",
   "main": "server.js",
@@ -9,20 +9,21 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "author": "sium01",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongodb": "^6.13.1",
-    "mongoose": "^8.10.1",
+  
+
     "nodemailer": "^6.10.0",
     "nodemailer-brevo-transport": "^2.1.0",
     "nodeman": "^1.1.2"
   },
   "proxy": "http://localhost:5000"
 }
-"engines": {
-  "node": ">=18.18.0 <19.0.0"
-}
+
