--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "port-folio",
+  "name": "hazary",
   "version": "1.0.0",
   "description": "It's a MERN stacke based Portfolio Website.",
   "main": "server.js",
@@ -8,6 +8,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   },
   "author": "sium01",
   "license": "ISC",
@@ -20,9 +23,8 @@
     "nodemailer": "^6.10.0",
     "nodemailer-brevo-transport": "^2.1.0",
     "nodeman": "^1.1.2"
-  },
-  "proxy": "http://localhost:5000"
+  }
+  
 }
-"engines": {
-  "node": ">=20.18.0 <21.0.0"
-}
+
+
