--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "postinstall": "npm run build"
+    
   },
   "engines": {
     "node": ">=16.0.0"
@@ -22,7 +22,11 @@
     "mongoose": "^8.10.1",
     "nodemailer": "^6.10.0",
     "nodemailer-brevo-transport": "^2.1.0",
-    "nodeman": "^1.1.2"
+    "nodeman": "^1.1.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^2.1.4"
   }
   
 }
