--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "It's a MERN stacke based Portfolio Website.",
   "main": "server.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "postinstall": "npm run build"
+     "start": "vite preview --port $PORT",
+    "build": "vite build"
+    
     
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": "18.x"
   },
   "author": "sium01",
   "license": "ISC",
@@ -18,15 +18,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongodb": "^6.13.1",
-    "mongoose": "^8.10.1",
-    "nodemailer": "^6.10.0",
+   "nodemailer": "^6.10.0",
     "nodemailer-brevo-transport": "^2.1.0",
     "nodeman": "^1.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-scripts": "^5.0.1",
-    "web-vitals": "^2.1.4"
+    "react-scripts": "^5.0.1"
   }
   
 }
