--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
   "scripts": {
      "dev": "vite dev",
     "build": "vite build",
-    "start": "vite preview --port $PORT"
+    "start": "vite preview --host 0.0.0.0 --port $PORT",
+     "postinstall": "npm run build"
+    
+
     
   },
   "engines": {
